add getdiscussion and GetMessagesBetween
